--- a/app/src/main/res/layout/activity_bai2.xml
+++ b/app/src/main/res/layout/activity_bai2.xml
@@ -11,34 +11,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="20dp">
-
-
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <EditText
                 android:id="@+id/edtInputCalculator"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:inputType="text"
-                android:hint="e.g 8" />
+                android:hint="e.g 8"
+                android:inputType="text" />
 
         </LinearLayout>
+
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="4"
-            android:rowCount="5"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp">
+            android:paddingBottom="10dp"
+            android:rowCount="5">
 
             <!-- Row 1 -->
             <Button
@@ -46,7 +46,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="7" />
 
             <Button
@@ -54,7 +53,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="8" />
 
             <Button
@@ -62,7 +60,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="9" />
 
             <Button
@@ -70,7 +67,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onOperatorClick"
                 android:text="/" />
 
             <!-- Row 2 -->
@@ -79,7 +75,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="4" />
 
             <Button
@@ -87,7 +82,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="5" />
 
             <Button
@@ -95,7 +89,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="6" />
 
             <Button
@@ -103,7 +96,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onOperatorClick"
                 android:text="*" />
 
             <!-- Row 3 -->
@@ -112,7 +104,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="1" />
 
             <Button
@@ -120,7 +111,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="2" />
 
             <Button
@@ -128,7 +118,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="3" />
 
             <Button
@@ -136,7 +125,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onOperatorClick"
                 android:text="-" />
 
             <!-- Row 4 -->
@@ -145,7 +133,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="0" />
 
             <Button
@@ -153,7 +140,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onDigitClick"
                 android:text="." />
 
             <Button
@@ -161,7 +147,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onEqualClick"
                 android:text="=" />
 
             <Button
@@ -169,7 +154,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:onClick="onOperatorClick"
                 android:text="+" />
 
             <!-- Row 5 -->
@@ -179,9 +163,9 @@
                 android:layout_height="wrap_content"
                 android:layout_columnSpan="4"
                 android:layout_columnWeight="1"
-                android:onClick="onClearClick"
                 android:text="C" />
         </GridLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
