--- a/app/src/main/res/layout/activity_bai4.xml
+++ b/app/src/main/res/layout/activity_bai4.xml
@@ -12,15 +12,15 @@
     >
 
     <TextView
-        android:layout_marginTop="100dp"
         android:id="@+id/headerLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="269dp"
+        android:text="Login Bai 4"
         android:textAlignment="center"
-        android:textColor="#ffbcd9"
-        android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textColor="#BCD2FF"
+        android:textSize="36sp" />
 
     <EditText
         android:id="@+id/edtUsername"
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editPassword"
-        android:backgroundTint="#ffbcd9"
+        android:backgroundTint="#3F51B5"
         android:text="Sign In" />
 
     <FrameLayout
