--- a/app/src/main/res/layout/activity_bai10.xml
+++ b/app/src/main/res/layout/activity_bai10.xml
@@ -18,11 +18,19 @@
     <ImageView
         android:id="@+id/imgAva"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_below="@+id/tvInfoLogin"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="61dp"
         android:src="@drawable/blueiconn" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout now"
+        android:id="@+id/btnLogout10"
+        android:layout_below="@+id/imgAva"
+        />
 
 </RelativeLayout>
