--- a/app/src/main/res/layout/listaccbai11.xml
+++ b/app/src/main/res/layout/listaccbai11.xml
@@ -3,37 +3,50 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@android:color/holo_blue_light"
     android:padding="8dp">
 
-    <EditText
-        android:id="@+id/etAccountName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Account Name" />
+<EditText
+android:id="@+id/etAccountName"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@android:color/transparent"
+    android:textColor="@android:color/black"
+    android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/etAccountPhone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone Number" />
+<EditText
+android:id="@+id/etAccountPhone"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@android:color/transparent"
+    android:textColor="@android:color/black"
+    android:textSize="16sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<LinearLayout
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnApply"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Apply" />
+<Button
+    android:id="@+id/btnApply"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:text="ok"
+    android:textColor="@android:color/white"
+android:background="@android:color/black"
+android:padding="12dp"
+android:layout_margin="8dp" />
 
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Delete" />
-    </LinearLayout>
+<Button
+    android:id="@+id/btnDelete"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:text="xoa"
+    android:textColor="@android:color/white"
+android:background="@android:color/black"
+android:padding="12dp"
+android:layout_margin="8dp" />
 </LinearLayout>
+    </LinearLayout>
