--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#ff505f</color>
+    <color name="pink">#FFC0CB</color>
     <color name="card_color">#DCDDDE</color>
 </resources>
